--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "mutstr"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 repository = "https://github.com/ThisAccountHasBeenSuspended/MutStr"
 license = "MIT OR Apache-2.0"
-authors = ["Nick-Ilhan Atamgüc <nickatamguec@outlook.com>"]
+authors = ["Nick Ilhan Atamgüc <nickatamguec@outlook.com>"]
 keywords = ["mutstr", "str", "string", "mut", "mutable"]
 description = "A mutable alternative for `&str`"
 
